snapshots/syntax/statements/objects/with_block/with_statement_with_loop.snap
---
source: vb6parse/src/syntax/statements/objects/with_block.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WithStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WithKeyword
                  text: With
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: myObject
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: ForStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: ForKeyword
                          text: For
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: i
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "1"
                        - kind: Whitespace
                          text: " "
                        - kind: ToKeyword
                          text: To
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "10"
                        - kind: Newline
                          text: "\n"
                        - kind: StatementList
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: CallStatement
                              children:
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Process
                                - kind: Whitespace
                                  text: " "
                                - kind: Identifier
                                  text: i
                                - kind: Newline
                                  text: "\n"
                            - kind: Whitespace
                              text: "        "
                        - kind: NextKeyword
                          text: Next
                        - kind: Whitespace
                          text: " "
                        - kind: Identifier
                          text: i
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: WithKeyword
                  text: With
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
